fix scrolling issue & add scrollbar styles

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,6 +1,8 @@
 @import '../styles/_variables.scss';
 
 $step-width: 220px;
+$icon-height: 80px;
+$content-height: 350px;
 
 html, body, #root {
   width:  100%;
@@ -16,8 +18,7 @@ html, body, #root {
   display: flex;
   flex-direction: column;
   text-align: center;
-  /* background-color: #282c34; */
-  background-color: #4d5057;
+  background-color: $bg-color-default;
 }
 .App__main {
   flex: 1 1;
@@ -25,7 +26,7 @@ html, body, #root {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: white;
+  color: $color;
   position: relative;
 }
 .App__helpButton {
@@ -45,7 +46,7 @@ html, body, #root {
   display: flex;
   flex-direction: row;
   align-items: center;
-  height: 350px;
+  height: $content-height;
 }
 .App__help {
   position: absolute;
@@ -54,7 +55,7 @@ html, body, #root {
   width: 100%;
   height: 100%;
   border-left: 1px solid #64686a;
-  background-color: #4d5057;
+  background-color: $bg-color-default;
   transition: all .3s ease-in-out;
   transform: translateX(100%);
 }
@@ -79,6 +80,7 @@ html, body, #root {
 .Step {
   position: relative;
   width: $step-width;
+  height: $content-height;
   display: flex;
   flex-direction: column;
   align-self: stretch;
@@ -86,7 +88,7 @@ html, body, #root {
 }
 .Step__icon {
   opacity: 0.2;
-  height: 80px;
+  height: $icon-height;
 }
 .Step.active .Step__icon{
   opacity: 1;
@@ -109,6 +111,8 @@ html, body, #root {
   flex-direction: column;
   align-items: center;
   margin: 1em 0;
+  max-height: calc(#{$content-height} - #{$icon-height});
+  overflow: hidden;
 }
 .Step__or {
   position: relative;
@@ -145,12 +149,16 @@ html, body, #root {
 .InputStep__entries {
   margin-bottom: 1em;
   width: 100%;
+  flex: 1 1;
+  overflow: auto;
 }
 
 
 .ProcessStep__entries {
   margin-bottom: 1em;
   width: 100%;
+  flex: 1 1;
+  overflow: auto;
 }
 .ProcessStep__download {
   margin-bottom: 1em !important;
