--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,9 +3,11 @@
 $font-family-text:  Ubuntu, Roboto, Arial, sans-serif;
 $font-family-title: Ubuntu, Roboto, Arial, sans-serif;
 
-$color: rgba(black, 0.6);
+$color: white;
 $light-color: rgba(black, 0.5);
-$bg-color-default: #f7f7f7;
+
+$bg-color-default: #4d5057;
+
 $border-color: #a0a0a0;
 $bg-color-dark: #e9e9e9;
 $border-color-dark: $bg-color-default;
